--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -31,3 +31,15 @@ gem "wdm", "~> 0.1.1", :platforms => [:mingw, :x64_mingw, :mswin]
 # Lock `http_parser.rb` gem to `v0.6.x` on JRuby builds since newer versions of the gem
 # do not have a Java counterpart.
 gem "http_parser.rb", "~> 0.6.0", :platforms => [:jruby]
+
+  gem "jekyll-seo-tag"
+  gem "jekyll-coffeescript"
+  gem "jekyll-commonmark-ghpages"
+  gem "jekyll-gist"
+  gem "jekyll-github-metadata"
+  gem "jekyll-paginate"
+  gem "jekyll-relative-links"
+  gem "jekyll-optional-front-matter"
+  gem "jekyll-readme-index"
+  gem "jekyll-default-layout"
+  gem "jekyll-titles-from-headings"
